Fix header on mobiles

--- a/static/themes/noders/public/css/component.css
+++ b/static/themes/noders/public/css/component.css
@@ -305,6 +305,15 @@ p{
 }
 .clear{ clear: both; float: none;}
 
-@media only screen and (max-width : 768px) {
-
+@media all and (max-width : 550px) {
+	#noders{
+		width: 95%;
+		margin: 100px auto 0 auto;
+		position: relative;
+		top: 0;
+		left: 0;
+	}
+	#noders svg{
+		width: 100%;
+	}
 }
